[project]
name = "param-ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elevenlabs>=2.11.0",
    "gradio>=5.43.1",
    "groq>=0.31.0",
    "gtts>=2.5.4",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.6.6",
    "opencv-python>=4.12.0.88",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "speechrecognition>=3.14.3",
]
